nginx_yaml_files/overlays/prod/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapnextgen-deployment
spec:
  template:
    spec:
      containers:
        image: ascomappsuite.azurecr.io/nordics/mapnextgen:latest
        name: mapnextgen
