nginx_yaml_files/overlays/prod/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapnextgen-deployment
spec:
  replicas: 1
