nginx_yaml_files/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxingress
spec:
  ingressClassName: nginx
  rules:
    - host: nginxtest-prod.locallab.local
      http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  number: 80
            path: /
            pathType: Prefix
